osx and linux working with and without bundled libs